// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-0 svg {
  fill: #535353;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  white-space: normal;
}

<time>
    <span
      class="emotion-0"
    >
      Mock Date 
    </span>
  </time>
</DocumentFragment>
`;

exports[`DateTime renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  white-space: normal;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-1:before,
.emotion-1:after {
  white-space: normal;
}

<time>
    <span
      class="emotion-0"
    >
      Updated: 
    </span>
    <span
      class="emotion-1"
    >
      Mock Date, 
    </span>
    <span
      class="emotion-0"
    >
      , The Times
    </span>
  </time>
</DocumentFragment>
`;

exports[`DateTime renders with provided date, format, prefix and suffix 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  white-space: pre;
}

.emotion-0 svg {
  fill: #535353;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  white-space: normal;
}

<time>
    <span
      class="emotion-0"
    >
      Updated:  
    </span>
    <span
      class="emotion-0"
    >
      Mock Date, 
    </span>
    <span
      class="emotion-0"
    >
      , The Times
    </span>
  </time>
</DocumentFragment>
`;
